@startuml  

class Parts {
  PartID
  PartName
  PartTypeID
  BrandID
  Price
  Compatibility
}

class Brands {
  BrandID
  BrandName
}

class PartTypes {
  PartTypeID
  TypeName
}

class Compatibility {
  CompatibilityId
  CompatibleWith
}

Parts --|> Brands: BrandID
Parts --|> PartTypes: PartTypeID
Parts --|> Compatibility: CompatibilityId

@enduml
